# webdevel.dev

./: .dockerignore  .gitignore  Makefile  README.md  configure.ac  docker-compose.yml
docker/alpine/: Dockerfile
etc/nginx/: nginx.conf
etc/nginx/http.d/: default.conf
src/: Makefile  main.c  webdevel.dev.c  webdevel.dev.h
tasks/: auto.mk  config.mk.in  docker.mk  help.mk  help.sh  linode.mk  linode.sh  main.sh  netselect.awk  ssh.mk  ssl.mk  sync.mk
tasks/acme/: acme.awk  directory.json
